--- a/package.json
+++ b/package.json
@@ -15,20 +15,27 @@
     "@react-navigation/drawer": "^6.5.6",
     "@react-navigation/native": "^6.1.1",
     "@react-navigation/native-stack": "^6.9.7",
-    "expo": "^46.0.0",
-    "expo-linear-gradient": "^12.0.1",
-    "expo-status-bar": "~1.4.0",
-    "react": "18.0.0",
-    "react-dom": "18.0.0",
-    "react-native": "0.69.6",
-    "react-native-gesture-handler": "~2.5.0",
-    "react-native-reanimated": "~2.9.1",
-    "react-native-safe-area-context": "4.3.1",
-    "react-native-screens": "~3.15.0",
-    "react-native-web": "~0.18.7"
+    "expo": "^45.0.0",
+    "expo-image-crop": "^1.0.4",
+    "expo-image-loader": "~3.2.0",
+    "expo-linear-gradient": "~11.3.0",
+    "expo-status-bar": "~1.3.0",
+    "mobx": "^6.7.0",
+    "mobx-react-lite": "^3.4.0",
+    "react": "17.0.2",
+    "react-dom": "17.0.2",
+    "react-hook-form": "^7.42.1",
+    "react-native": "0.68.2",
+    "react-native-gesture-handler": "~2.2.1",
+    "react-native-image-crop-picker": "^0.39.0",
+    "react-native-reanimated": "~2.8.0",
+    "react-native-safe-area-context": "4.2.4",
+    "react-native-screens": "~3.11.1",
+    "react-native-web": "0.17.7"
   },
   "devDependencies": {
-    "@babel/core": "^7.18.6"
+    "@babel/core": "^7.12.9",
+    "expo-image-picker": "~13.1.1"
   },
   "private": true
 }
